classDiagram
%% Relationships
    Editable <|-- Product
    Product <|-- Ticket
    Product <|-- Publication
    Product <|-- Stationery
    Product <|-- MusicalInstrument
    Publication <|-- Book
    Publication <|-- Magazine
    Magazine <|-- DiscMag
    SaleableItem <|.. Product
    Serializable <|.. Product
    Product <-- CashTill

    class Editable {
        <<abstract>>
        -Scanner input
        +String getInput(String)
        +int getInput(int)
        +double getInput(double)
        +boolean getInput(boolean)
        +Date getInput(Date)
        +Enum getInput(Enum)
        +edit()*
        +initialize()*
    }

    class Product {
        <<abstract>>
        -String productId
        +getProductId() String
        +setProductId(String)
        +initialize()
        +edit()
    }

    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice()
    }

    class Serializable {
        <<interface>>
    }

    class Ticket {
        +String description
        +double price
        +sellItem()
        +getPrice()
        +initialize()
        +edit()
        +toString()
    }

    class Publication {
        <<abstract>>
        -String title
        -double price
        -int copies
        +getPrice()
        +Publication()
        +Publication(String, double, int)
        +toString()
        +equals()
        +hashCode()
    }

    class Book {
        -String author
        +Book()
        +Book(String)
        +Book(String, String, double, int)
        +initialize()
        +edit()
        +sellItem()
        +toString()
    }

    class Magazine {
        -int orderQty
        -Date currentIssue
        +Magazine()
        +Magazine(int, Date, String, double, int)
        +initialize()
        +edit()
        +sellItem()
        +toString()
    }

    class DiscMag {
        -boolean hasDisc
        +DiscMag()
        +DiscMag(boolean, int, Date, String, double, int)
        +initialize()
        +edit()
        +sellItem()
    }

    class Stationery {
        <<abstract>>
        -String brand
        -double price
        +getBrand() String
        +setBrand(String)
        +getPrice() double
        +initialize()
        +edit()
    }

    class MusicalInstrument {
        <<abstract>>
        #String material
        -double price
        +getPrice() double
        +initialize()
        +edit()
    }

    class CashTill {
        -double runningTotal
        +CashTill()
        +showTotal()
        +sellItem(SaleableItem item)
    }